[package]
name = "programming_points"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
once_cell = "1.19.0"
hyper = "1.1.0"
hyper-rustls = "0.26.0"
tokio = "1.36.0"
yup-oauth2 = "8.3.2"
anyhow = "1.0.80"
